<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_formWz2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black_background"
        tools:context=".formWzllFragment">


        <ImageButton
            android:id="@+id/buttonBack_formWz2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:backgroundTint="#00FFFFFF"
            android:contentDescription="TODO"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:src="@drawable/ic_baseline_arrow_back_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="SpeakableTextPresentCheck" />


        <TextView
            android:id="@+id/textView_title_formWz2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/title_formWz2"
            android:textColor="@color/white_primary"
            android:textSize="32sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/buttonBack_formWz2" />


        <EditText
            android:id="@+id/editText_nome_formWz2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="32dp"
            android:hint="@string/nome_formWz2"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColor="@color/white_primary"
            android:textColorHint="@color/white_editText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView_title_formWz2" />


        <EditText
            android:id="@+id/editText_boca_formWz2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:hint="@string/boca_formWz2"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColor="@color/white_primary"
            android:textColorHint="@color/white_editText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editText_nome_formWz2" />


        <EditText
            android:id="@+id/editText_cano_formWz2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:hint="@string/cano_formWz2"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColor="@color/white_primary"
            android:textColorHint="@color/white_editText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editText_boca_formWz2" />


        <EditText
            android:id="@+id/editText_laser_formWz2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:hint="@string/laser_formWz2"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColor="@color/white_primary"
            android:textColorHint="@color/white_editText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editText_cano_formWz2" />


        <EditText
            android:id="@+id/editText_lente_formWz2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:hint="@string/lente_formWz2"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColor="@color/white_primary"
            android:textColorHint="@color/white_editText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editText_laser_formWz2" />


        <EditText
            android:id="@+id/editText_coronha_formWz2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:hint="@string/coronha_formWz2"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColor="@color/white_primary"
            android:textColorHint="@color/white_editText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editText_lente_formWz2" />


        <EditText
            android:id="@+id/editText_acoplamento_formWz2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:hint="@string/acoplamento_formWz2"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColor="@color/white_primary"
            android:textColorHint="@color/white_editText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editText_coronha_formWz2" />


        <EditText
            android:id="@+id/editText_municao_formWz2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:hint="@string/municao_formWz2"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColor="@color/white_primary"
            android:textColorHint="@color/white_editText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editText_acoplamento_formWz2" />


        <EditText
            android:id="@+id/editText_carregador_formWz2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:hint="@string/carregador_formWz2"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColor="@color/white_primary"
            android:textColorHint="@color/white_editText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editText_municao_formWz2" />


        <EditText
            android:id="@+id/editText_cabo_formWz2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:hint="@string/cabo_formWz2"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColor="@color/white_primary"
            android:textColorHint="@color/white_editText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editText_carregador_formWz2" />


        <Button
            android:id="@+id/button_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="32dp"
            android:text="@string/button_criarLoadout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editText_cabo_formWz2"
            app:layout_constraintVertical_bias="1" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>


